# stm32-devops-template

./: .buildinfo  .gitignore  .nojekyll  .uncrustify.cfg  CMakeLists.txt  Dockerfile  Doxyfile  README.md  examples.html  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js  testing.html
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: cmake.yml  doxygen.yml  sphinx.yml
_sources/: index.rst.txt
api/: data_structures.html  functions.html  index.html
config/: project_info.cmake
docs/: .gitignore  Doxyfile.xml  Makefile  _r_e_a_d_m_e_8md.html  annotated.html  circular__queue_8c.html  circular__queue_8c_source.html  circular__queue_8h.html  circular__queue_8h_source.html  classes.html  common__types_8h.html  common__types_8h_source.html  conf.py  dir_5fc0655521021ea16bff7a3e8e3c2e19.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_92078691e8d68eaf6c784a02f7365169.html  dir_c1be8d27e7f84178e95f152701110b19.html  examples.rst  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  group___circular_queue.html  group___common_types.html  group___data_structures.html  group___linked_list.html  group___priority_queue.html  group___regular_queue.html  index.html  linked__list_8c.html  linked__list_8c_source.html  linked__list_8h.html  linked__list_8h_source.html  (+26 more)
docs/api/: data_structures.rst  functions.rst  index.rst
docs/html/: dir_97aefd0d527b934f1d99a682da8fe6a9.html
lib/linked_list/: linked_list.c  linked_list.h
scripts/: clang-format.bat  run.sh  run_on_windows.bat
src/: main.c  main.h  startup_stm32f407xx.c  syscalls.c
src/autogen/: linker_script.ld  startup_stm32f407xx.c  syscalls.c
src/data/: circular_queue.c  circular_queue.h  common_types.h  linked_list.c  linked_list.h  priority_queue.c  priority_queue.h  queue.c  queue.h
test/: test_circular_queue.c  test_linked_list.c  test_priority_queue.c  test_queue.c
